fixing extra space beneath front page bio

--- a/src/style.css
+++ b/src/style.css
@@ -190,7 +190,7 @@ a:focus {
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
-  margin-bottom: var(--spacing-20);
+  margin-bottom: var(--spacing-6);
 }
 
 .main-heading {
